--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,6 @@
   <name>spaceInvader Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-
       <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
       <dependency>
           <groupId>com.google.inject</groupId>
@@ -33,6 +26,11 @@
           <groupId>commons-beanutils</groupId>
           <artifactId>commons-beanutils</artifactId>
           <version>1.9.3</version>
+      </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>RELEASE</version>
       </dependency>
 
 
